--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </div>
 <div class="section">
     <h2>Summary</h2>
+    <hr>
     <p class="summary-content">
         A self-driven undergraduate student majoring in computer engineering who has a love of solving problems and a
         keen
@@ -29,6 +30,7 @@
 </div>
 <div class="section">
     <h2>Education</h2>
+    <hr>
     <table>
         <tr>
             <td class="table-content-left bold">Devang Patel Institute of Advance Technology and Research</td>
@@ -89,6 +91,7 @@
 </div>
 <div class="section">
     <h2>Skills</h2>
+    <hr>
     <table>
         <tr>
             <td class="table-content-left bold">Technical:</td>
@@ -110,6 +113,26 @@
 </div>
 <div class="section">
     <h2>Professional Experience</h2>
+    <hr>
+    <table>
+        <tr>
+            <td class="table-content-left bold">Port Manager Database</td>
+            <td class="table-content-right">June 2023</td>
+        </tr>
+        <tr>
+            <td class="table-content-left italic">Tridhya Tech (Oracle Developer)</td>
+            <td class="table-content-right">Ahmedabad, Gujarat</td>
+        </tr>
+        <tr>
+            <td>
+                <ul>
+                    <li>
+                        Working on Port Manager databse.
+                    </li>
+                </ul>
+            </td>
+        </tr>
+    </table>
     <table>
         <tr>
             <td class="table-content-left bold">Smart Attendance System</td>
@@ -133,6 +156,23 @@
 </div>
 <div class="section">
     <h2>Projects</h2>
+    <hr>
+    <table>
+        <tr>
+            <td class="table-content-left bold">Attendance System Using Face Recognition</td>
+            <td class="table-content-right">Jan 2023-April 2023</td>
+        </tr>
+        <tr>
+            <td>
+                <ul>
+                    <li>
+                        A face recognition-based attendance system for the organization's employees was developed using
+                        the Django, OpenCV, and Local Bianry Pattern Histogram (LBPH) algorithm.
+                    </li>
+                </ul>
+            </td>
+        </tr>
+    </table>
     <table>
         <tr>
             <td class="table-content-left bold">Digital Marketing Project</td>
@@ -169,6 +209,7 @@
 </div>
 <div class="section">
     <h2>Certifications</h2>
+    <hr>
     <table>
         <tr>
             <td class="table-content-left bold"><a href="https://www.coursera.org/account/accomplishments/certificate/BW2GEZ9WPJAD">Introduction to Artificial Intelligence (AI)</a></td>
