--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-<div style="text-align: center;">
+<div class="section">
     <h1>Karankumar Khojiji</h1>
+    <hr>
     <p>Email: khojijikaran@gmail.com</p>
     <p>Phone: (+91) 9106211165</p>
     <p>
