--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <hr>
     <table>
         <tr>
-            <td class="table-content-left bold">Port Manager Database</td>
+            <td class="table-content-left bold">Finance Portfolio Management</td>
             <td class="table-content-right">June 2023</td>
         </tr>
         <tr>
@@ -128,7 +128,7 @@
             <td>
                 <ul>
                     <li>
-                        Working on Port Manager databse.
+                        Working on Finance Portfolio Management database.
                     </li>
                 </ul>
             </td>
