--- a/index.html
+++ b/index.html
@@ -220,19 +220,19 @@
             <tr>
                 <td class="table-content-left bold"><a
                         href="https://www.coursera.org/account/accomplishments/certificate/BW2GEZ9WPJAD"
-                        target="_blank">Introduction to Artificial Intelligence (AI) (Coursera)</a></td>
+                        target="_blank">Introduction to Artificial Intelligence (AI)</a>(Coursera)</td>
                 <td class="table-content-right">May 2023</td>
             </tr>
             <tr>
                 <td class="table-content-left bold"><a
                         href="https://www.coursera.org/account/accomplishments/certificate/3LSURFTDHLCJ"
-                        target="_blank">Oracle Database Foundations (Coursera)</a></td>
+                        target="_blank">Oracle Database Foundations</a>(Coursera)</td>
                 <td class="table-content-right">April 2022</td>
             </tr>
             <tr>
                 <td class="table-content-left bold"><a
                         href="https://www.coursera.org/account/accomplishments/certificate/D42SNT6DT4Y7"
-                        target="_blank">Programming for Everybody (Getting Started with Python) (Coursera)</a></td>
+                        target="_blank">Programming for Everybody (Getting Started with Python)</a>(Coursera)</td>
                 <td class="table-content-right">March 2022</td>
             </tr>
         </table>
