--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 
 <body>
-    <div class="section">
+    <div class="name-section">
         <h1>Karankumar Khojiji</h1>
         <hr>
-        <p>khojijikaran@gmail.com | (+91) 9106211165 | <a href="https://www.linkedin.com/in/karankumarkhojiji/"
+        <p style="margin-top: 0px; margin-bottom: 0px;">khojijikaran@gmail.com | (+91) 9106211165 | <a
+                href="https://www.linkedin.com/in/karankumarkhojiji/"
                 target="_blank">www.linkedin.com/in/karankumarkhojiji</a>
         </p>
     </div>
@@ -32,7 +33,7 @@
         <hr>
         <table>
             <tr>
-                <td class="table-content-left bold">Devang Patel Institute of Advance Technology and Research</td>
+                <th class="table-content-left">Devang Patel Institute of Advance Technology and Research <i>(CHARUSAT)</i></th>
                 <td class="table-content-right">Changa, Gujarat</td>
             </tr>
             <tr>
@@ -45,7 +46,7 @@
             <tr>
                 <td>
                     <ul>
-                        <li>I took part in the hackathon and placed third</li>
+                        <li>Took part in the hackathon and placed third</li>
                         <li>As part of 30 Days of Google Cloud 2021, complete the Cloud Engineering Track and the Data
                             Science & Machine Learning Track.
                         </li>
@@ -55,7 +56,7 @@
         </table>
         <table>
             <tr>
-                <td class="table-content-left bold">Om Institute of Engineering and Technology</td>
+                <th class="table-content-left">Om Institute of Engineering and Technology <i>(GTU)</i></th>
                 <td class="table-content-right">Junagadh, Gujarat</td>
             </tr>
             <tr>
@@ -76,7 +77,7 @@
         </table>
         <table>
             <tr>
-                <td class="table-content-left bold">Krishna School</td>
+                <th class="table-content-left">Krishna School</th>
                 <td class="table-content-right">Bhesan, Gujarat</td>
             </tr>
             <tr>
@@ -89,37 +90,104 @@
         </table>
     </div>
     <div class="section">
-        <h2>Skills</h2>
-        <hr>
-        <table>
-            <tr>
-                <td class="table-content-left bold">Technical:</td>
-                <td class="table-content">
-                    Microsoft Office, C/C++, Java, PHP, Python, Django, Oracle/MySQL, Web
-                    Development,
-                    Computer Vision, Computer Maintenance & Troubleshooting
-                </td>
-            </tr>
-            <tr>
-                <td class="table-content-left bold">Language:</td>
-                <td class="table-content">Gujarati, Hindi, English</td>
-            </tr>
-            <tr>
-                <td class="table-content-left bold">Hobbies:</td>
-                <td class="table-content">Playing volleyball, Motorcycling, Reading</td>
-            </tr>
-        </table>
-    </div>
-    <div class="section">
         <h2>Professional Experience</h2>
         <hr>
         <table>
             <tr>
-                <td class="table-content-left bold">Port Manager Database</td>
-                <td class="table-content-right">June 2023</td>
+                <th class="table-content-left">Tridhya Tech Limited</td>
+                <td class="table-content-right">May 2023-June 2023</td>
             </tr>
             <tr>
-                <td class="table-content-left italic">Tridhya Tech (Oracle Developer)</td>
+                <td class="table-content-left italic">Oracle Intern</td>
+                <td class="table-content-right">Ahmedabad, Gujarat</td>
+            </tr>
+            <tr>
+                <td>
+                    <ul>
+                        <li>
+                            Developed a portfolio management system using PL/SQL.
+                        </li>
+                        <li>
+                            Designed and implemented the database schema for the system using
+                            Oracle database.
+                        </li>
+                        <li>
+                            Learned Tableau and used it to create visualizations for analysis purposes.
+                        </li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <th class="table-content-left">Prolog Infotech</th>
+                <td class="table-content-right">May 2022-June 2022</td>
+            </tr>
+            <tr>
+                <td class="table-content-left italic">Python Intern</td>
+                <td class="table-content-right">Rajkot, Gujarat</td>
+            </tr>
+            <tr>
+                <td>
+                    <ul>
+                        <li>
+                            Developed a face recognition-based attendance system using Python (Django).
+                        </li>
+                        <li>
+                            Designed and implemented the database schema for the system using MySQL database.
+                        </li>
+                        <li>
+                            Developed a user-friendly web interface for the attendance system.
+                        </li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+    </div>
+    <div class="section">
+        <h2>Technical Skills</h2>
+        <hr>
+        <table>
+            <tr>
+                <td class="table-content"><strong>Programming Languages: </strong>C/C++, Java, PHP, Python, SQL</td>
+            </tr>
+            <tr>
+                <td class="table-content"><strong>Frameworks/Libraries: </strong>Django, OpenCV, NumPy</td>
+            </tr>
+            <tr>
+                <td class="table-content"><strong>Web Development: </strong>HTML, CSS, JavaScript, Bootstrap, jQuery,
+                    AJAX</td>
+            </tr>
+            <tr>
+                <td class="table-content"><strong>Tools: </strong>Git, GitHub, Visual Studio Code, PyCharm, Datagrip,
+                    Microsoft Teams</td>
+            </tr>
+            <tr>
+                <td class="table-content"><strong>Operating System: </strong>Windows, Linux</td>
+            </tr>
+            <tr>
+                <td class="table-content"><strong>Databases: </strong>Oracle, MySQL, PostgreSQL</td>
+            </tr>
+
+            <tr>
+                <td class="table-content"><strong>Microsoft Office Suite: </strong>Word, Excel, PowerPoint, Visio</td>
+            </tr>
+            <tr>
+                <td class="table-content"><strong>Computer Maintenance & Troubleshooting: </strong>Basic Hardware
+                    Installation and Maintenance, Basic Network Configuration</td>
+            </tr>
+        </table>
+    </div>
+    <div class="section">
+        <h2>Projects</h2>
+        <hr>
+        <table>
+            <tr>
+                <th class="table-content-left">Finance Portfolio Management System</th>
+                <td class="table-content-right">May 2023-June 2023</td>
+            </tr>
+            <tr>
+                <td class="table-content-left italic">Tridhya Tech (Oracle Intern)</td>
                 <td class="table-content-right">Ahmedabad, Gujarat</td>
             </tr>
             <tr>
@@ -137,7 +205,25 @@
         </table>
         <table>
             <tr>
-                <td class="table-content-left bold">Smart Attendance System</td>
+                <th class="table-content-left">Attendance System Using Face Recognition</th>
+                <td class="table-content-right">Jan 2023-April 2023</td>
+            </tr>
+            <tr>
+                <td>
+                    <ul>
+                        <li>
+                            Developed a face recognition-based attendance system using Django, OpenCV, and LBPH
+                            algorithm. Leveraged PostgreSQL database for efficient data management and extended the user
+                            interface for enhanced usability. The system ensures accurate identification and recording
+                            of employee attendance while maintaining a user-friendly experience.
+                        </li>
+                    </ul>
+                </td>
+            </tr>
+        </table>
+        <table>
+            <tr>
+                <th class="table-content-left">Smart Attendance System</th>
                 <td class="table-content-right">May 2022-June 2022</td>
             </tr>
             <tr>
@@ -148,30 +234,9 @@
                 <td>
                     <ul>
                         <li>
-                            A face recognition-based attendance system for the organization's employees was developed
-                            using
-                            the Django, OpenCV, and face_recognition packages.
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        </table>
-    </div>
-    <div class="section">
-        <h2>Projects</h2>
-        <hr>
-        <table>
-            <tr>
-                <td class="table-content-left bold">Attendance System Using Face Recognition</td>
-                <td class="table-content-right">Jan 2023-April 2023</td>
-            </tr>
-            <tr>
-                <td>
-                    <ul>
-                        <li>
-                            A face recognition-based attendance system for the organization's employees was developed
-                            using
-                            the Django, OpenCV, and Local Bianry Pattern Histogram (LBPH) algorithm.
+                            Developed a face recognition-based attendance system using Django, OpenCV, and
+                            face_recognition. The web application manages employee data, generates comprehensive
+                            attendance reports, and prioritizes a user-friendly interface.
                         </li>
                     </ul>
                 </td>
@@ -179,17 +244,17 @@
         </table>
         <table>
             <tr>
-                <td class="table-content-left bold">Hospital Management System</td>
+                <th class="table-content-left">Hospital Management System</th>
                 <td class="table-content-right">July 2020-May 2021</td>
             </tr>
             <tr>
                 <td>
                     <ul>
                         <li>
-                            Using Django, I created a web application that serves as a hospital management system. It
-                            contains features including scheduling, online appointments, employee management, and
-                            patient
-                            management.
+                            Created a hospital management web application using Django, featuring scheduling, online
+                            appointments, employee and patient management. Implemented AJAX for seamless interactions,
+                            data export capability, and a role-based system for secure access control.The application
+                            streamlines hospital operations, improving efficiency and facilitating better patient care.
                         </li>
                     </ul>
                 </td>
@@ -201,24 +266,25 @@
         <hr>
         <table>
             <tr>
-                <td class="table-content-left bold"><a
+                <th class="table-content-left"><a
                         href="https://www.coursera.org/account/accomplishments/certificate/BW2GEZ9WPJAD"
-                        target="_blank">Introduction to Artificial Intelligence (AI)</a> (Coursera)</td>
+                        target="_blank">Introduction to Artificial Intelligence (AI)</a> (Coursera)</th>
                 <td class="table-content-right">May 2023</td>
             </tr>
             <tr>
-                <td class="table-content-left bold"><a
+                <th class="table-content-left"><a
                         href="https://www.coursera.org/account/accomplishments/certificate/3LSURFTDHLCJ"
-                        target="_blank">Oracle Database Foundations</a> (Coursera)</td>
+                        target="_blank">Oracle Database Foundations</a> (Coursera)</th>
                 <td class="table-content-right">April 2022</td>
             </tr>
             <tr>
-                <td class="table-content-left bold"><a
+                <th class="table-content-left"><a
                         href="https://www.coursera.org/account/accomplishments/certificate/D42SNT6DT4Y7"
-                        target="_blank">Programming for Everybody (Getting Started with Python)</a> (Coursera)</td>
+                        target="_blank">Programming for Everybody (Getting Started with Python)</a> (Coursera)</th>
                 <td class="table-content-right">March 2022</td>
             </tr>
         </table>
     </div>
 </body>
+
 </html>
