--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
 <body>
     <div class="name-section">
         <h1>Karankumar Khojiji</h1>
-        <hr>
-        <p style="margin-top: 0px; margin-bottom: 0px;">khojijikaran@gmail.com | (+91) 9106211165 | <a
-                href="https://www.linkedin.com/in/karankumarkhojiji/"
-                target="_blank">www.linkedin.com/in/karankumarkhojiji</a>
-        </p>
+        <div>
+            <p style="margin-bottom: 5px">
+                khojijikaran@gmail.com | (+91) 91062-11165 | Bhesan, Gujarat, 362020
+            </p>
+            <p style="margin-top: 5px;">
+                <a href="https://www.linkedin.com/in/karankumarkhojiji/"
+                    target="_blank">linkedin.com/in/karankumarkhojiji</a> |
+                <a href="https://github.com/karankumarkhojiji" target="_blank">github.com/karankumarkhojiji</a>
+            </p>
+        </div>
     </div>
     <div class="section">
-        <hr>
         <h2>Summary</h2>
-        <hr>
-        <p class="summary-content">
+        <hr class="section-hr">
+        <p>
             A self-driven undergraduate student majoring in computer engineering who has a love of solving problems and
             a
             keen
@@ -30,12 +34,13 @@
         </p>
     </div>
     <div class="section">
-        <hr>
         <h2>Education</h2>
-        <hr>
+        <hr class="section-hr">
         <table>
             <tr>
-                <th class="table-content-left">Devang Patel Institute of Advance Technology and Research <i>(CHARUSAT)</i></th>
+                <th class="table-content-left">Devang Patel Institute of Advance Technology and Research
+                    <i>(CHARUSAT)</i>
+                </th>
                 <td class="table-content-right">Changa, Gujarat</td>
             </tr>
             <tr>
@@ -79,7 +84,7 @@
         </table>
         <table>
             <tr>
-                <th class="table-content-left">Krishna School</th>
+                <th class="table-content-left">Krishna School <i>(GSHSEB)</i></th>
                 <td class="table-content-right">Bhesan, Gujarat</td>
             </tr>
             <tr>
@@ -92,9 +97,8 @@
         </table>
     </div>
     <div class="section">
-        <hr>
         <h2>Professional Experience</h2>
-        <hr>
+        <hr class="section-hr">
         <table>
             <tr>
                 <th class="table-content-left">Tridhya Tech Limited</td>
@@ -108,14 +112,20 @@
                 <td>
                     <ul>
                         <li>
-                            Developed a portfolio management system using PL/SQL.
+                            Designed and developed a robust portfolio management system utilizing an Oracle database and
+                            PL/SQL.
                         </li>
                         <li>
-                            Designed and implemented the database schema for the system using
-                            Oracle database.
+                            Utilized PL/SQL to generate comprehensive reports, track transactions, and retrieve equity
+                            details, enabling users to make informed investment decisions.
                         </li>
                         <li>
-                            Learned Tableau and used it to create visualizations for analysis purposes.
+                            Integrated Tableau for interactive data visualization, delivering intuitive and insightful
+                            visual representations of financial activities and investment performance.
+                        </li>
+                        <li>
+                            Collaborated with stakeholders to understand requirements, optimize system performance, and
+                            deliver a user-friendly and efficient solution.
                         </li>
                     </ul>
                 </td>
@@ -134,13 +144,21 @@
                 <td>
                     <ul>
                         <li>
-                            Developed a face recognition-based attendance system using Python (Django).
+                            Developed a smart attendance system utilizing facial recognition technology, Django,
+                            Bootstrap, and various JavaScript libraries.
                         </li>
                         <li>
-                            Designed and implemented the database schema for the system using MySQL database.
+                            Leveraged MySQL as the backend database for efficient data storage and retrieval.
                         </li>
                         <li>
-                            Developed a user-friendly web interface for the attendance system.
+                            Implemented OpenCV and the face_recognition library for reliable facial recognition and
+                            identification.
+                        </li>
+                        <li>Created a user-friendly interface using Bootstrap and customized JavaScript functionalities,
+                            enhancing system usability and accessibility.
+                        </li>
+                        <li>Collaborated closely with stakeholders to understand their attendance management
+                            requirements and tailored the system accordingly.
                         </li>
                     </ul>
                 </td>
@@ -148,9 +166,8 @@
         </table>
     </div>
     <div class="section">
-        <hr>
         <h2>Technical Skills</h2>
-        <hr>
+        <hr class="section-hr">
         <table>
             <tr>
                 <td class="table-content"><strong>Programming Languages: </strong>C/C++, Java, PHP, Python, SQL</td>
@@ -163,18 +180,12 @@
                     AJAX</td>
             </tr>
             <tr>
-                <td class="table-content"><strong>Tools: </strong>Git, GitHub, Visual Studio Code, PyCharm, Datagrip,
+                <td class="table-content"><strong>Tools: </strong>Microsoft Office, Git, GitHub, Visual Studio Code,
+                    PyCharm, Datagrip,
                     Microsoft Teams</td>
             </tr>
             <tr>
-                <td class="table-content"><strong>Operating System: </strong>Windows, Linux</td>
-            </tr>
-            <tr>
                 <td class="table-content"><strong>Databases: </strong>Oracle, MySQL, PostgreSQL</td>
-            </tr>
-
-            <tr>
-                <td class="table-content"><strong>Microsoft Office Suite: </strong>Word, Excel, PowerPoint, Visio</td>
             </tr>
             <tr>
                 <td class="table-content"><strong>Computer Maintenance & Troubleshooting: </strong>Basic Hardware
@@ -183,31 +194,8 @@
         </table>
     </div>
     <div class="section">
-        <hr>
         <h2>Projects</h2>
-        <hr>
-        <table>
-            <tr>
-                <th class="table-content-left">Finance Portfolio Management System</th>
-                <td class="table-content-right">May 2023-June 2023</td>
-            </tr>
-            <tr>
-                <td class="table-content-left italic">Tridhya Tech (Oracle Intern)</td>
-                <td class="table-content-right">Ahmedabad, Gujarat</td>
-            </tr>
-            <tr>
-                <td>
-                    <ul>
-                        <li>
-                            Working on a financial portfolio management system that allows customers to manage their
-                            investments and track transactions. It includes features such as generating portfolio
-                            reports, retrieving equity details, and analysing investment performance. The system aims to
-                            provide users with comprehensive insights into their financial activities.
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        </table>
+        <hr class="section-hr">
         <table>
             <tr>
                 <th class="table-content-left">Attendance System Using Face Recognition</th>
@@ -217,31 +205,19 @@
                 <td>
                     <ul>
                         <li>
-                            Developed a face recognition-based attendance system using Django, OpenCV, and LBPH
-                            algorithm. Leveraged PostgreSQL database for efficient data management and extended the user
-                            interface for enhanced usability. The system ensures accurate identification and recording
-                            of employee attendance while maintaining a user-friendly experience.
+                            Developed a highly efficient face recognition-based attendance system using Django, OpenCV,
+                            and LBPH algorithm.
                         </li>
-                    </ul>
-                </td>
-            </tr>
-        </table>
-        <table>
-            <tr>
-                <th class="table-content-left">Smart Attendance System</th>
-                <td class="table-content-right">May 2022-June 2022</td>
-            </tr>
-            <tr>
-                <td class="table-content-left italic">Prolog Infotech (Python Intern)</td>
-                <td class="table-content-right">Rajkot, Gujarat</td>
-            </tr>
-            <tr>
-                <td>
-                    <ul>
-                        <li>
-                            Developed a face recognition-based attendance system using Django, OpenCV, and
-                            face_recognition. The web application manages employee data, generates comprehensive
-                            attendance reports, and prioritizes a user-friendly interface.
+                        <li>Leveraged PostgreSQL database for streamlined data management, ensuring accurate recording
+                            of employee attendance.</li>
+                        <li>Extended the user interface to enhance usability, resulting in a seamless and intuitive
+                            experience for users.
+                        </li>
+                        <li>Automated attendance management processes, eliminating manual tracking and improving overall
+                            efficiency.
+                        </li>
+                        <li>Contributed to a user-friendly and reliable solution that simplifies attendance tracking and
+                            data management.
                         </li>
                     </ul>
                 </td>
@@ -256,10 +232,20 @@
                 <td>
                     <ul>
                         <li>
-                            Created a hospital management web application using Django, featuring scheduling, online
-                            appointments, employee and patient management. Implemented AJAX for seamless interactions,
-                            data export capability, and a role-based system for secure access control.The application
-                            streamlines hospital operations, improving efficiency and facilitating better patient care.
+                            Developed a comprehensive hospital management web application using Django as the backend
+                            framework and MySQL database for efficient data storage and retrieval.
+                        </li>
+                        <li>Designed and implemented the frontend using Bootstrap, leveraging its responsive and
+                            customizable components for a modern and user-friendly interface.
+                        </li>
+                        <li>Implemented features such as scheduling, online appointments, employee and patient
+                            management to streamline hospital operations and improve efficiency.
+                        </li>
+                        <li>Utilized Django's powerful features for data modeling, authentication, and routing to create
+                            a robust and secure application.
+                        </li>
+                        <li>Demonstrated expertise in Django, MySQL, Bootstrap 4, and JavaScript libraries, showcasing a
+                            well-rounded skillset in both backend and frontend development.
                         </li>
                     </ul>
                 </td>
@@ -267,9 +253,8 @@
         </table>
     </div>
     <div class="section">
-        <hr>
         <h2>Certifications</h2>
-        <hr>
+        <hr class="section-hr">
         <table>
             <tr>
                 <th class="table-content-left"><a
