--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                     </tr>
                     <tr>
                         <td class="table-content-left italic">Bachelor of Technology in Computer Engineering</td>
-                        <td class="table-content-right">2021-Present</td>
+                        <td class="table-content-right">2021-2024</td>
                     </tr>
                     <tr>
-                        <td class="table-content-left italic">CGPA: 8.05</td>
+                        <td class="table-content-left italic">CGPA: 8.28</td>
                     </tr>
                     <tr>
                         <td>
@@ -83,24 +83,29 @@
                         </td>
                     </tr>
                 </table>
-                <table>
-                    <tr>
-                        <th class="table-content-left">Krishna School <i>(GSHSEB)</i></th>
-                        <td class="table-content-right">Bhesan, Gujarat</td>
-                    </tr>
-                    <tr>
-                        <td class="table-content-left italic">Gujarat Board Secondary School Certificate Examination
-                            (SSC)</td>
-                        <td class="table-content-right">2018</td>
-                    </tr>
-                    <tr>
-                        <td class="table-content-left italic">Percentage: 85.83%</td>
-                    </tr>
-                </table>
             </section>
             <section id="experience" class="section">
                 <h2>Experience</h2>
                 <hr class="section-hr">
+                <table>
+                    <tr>
+                        <th class="table-content-left">Tridhya Tech Limited</th>
+                        <td class="table-content-right">Jan 2024-Apr 2024</td>
+                    </tr>
+                    <tr>
+                        <td class="table-content-left italic">Backend Development Intern</td>
+                        <td class="table-content-right">Ahmedabad, Gujarat</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <ul>
+                                <li>Leading the creation of server-side applications with Express.js for robust functionality and top-notch performance.</li>
+                                <li>Handling MongoDB databases, focusing on effective data modeling, scalability, and implementing best practices for security.</li>
+                                <li>Designing and integrating APIs to improve system connectivity.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
                 <table>
                     <tr>
                         <th class="table-content-left">Tridhya Tech Limited</th>
